k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: <your-node-name>
      containers:
        - name: backend
          image: lucasmatni01/todolist-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: backend
spec:
  type: NodePort
  ports:
    - nodePort: 31559
      port: 5000
      targetPort: 5000
  selector:
    app: backend
